2006-05-19  Steve Frécinaux  <steve@istique.net>

	* gedit/Makefile.am: Build gedit as a static library before including it
	in the binary (needed for gtk-doc gobject inspection)
	
	* configure.ac:
	* Makefile.am:
	* docs/Makefile.am:
	* docs/reference/Makefile.am:
	* docs/reference/gedit-docs.sgml:
	* docs/reference/gedit-overrides.txt:
	* docs/reference/gedit.types:
	
	Initial setup of gtk-doc for gedit.

	* .cvsignore:
	* bindings/python/.cvsignore:
	* doc/.cvsignore:
	* doc/reference/.cvsignore:
	* m4/.cvsignore:
	
	Update some CVSIGNORE files.

2006-05-19  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-commands-search.c
	* gedit/gedit-document-saver.c
	* gedit/gedit-document.c
	* gedit/gedit-prefs-manager.c
	* gedit/gedit-python-module.c
	* gedit/gedit-spinner.h
	* gedit/gedit-window.c
	* gedit/gedit.c

	Fix a bunch of compiler warnings from the ICC compiler.

=== gedit 2.15.2 ===

2006-05-15  Steve Frécinaux  <steve@istique.net>

	* configure.ac: bump intltool requirement to 0.35.0

	* configure.ac:
	* NEWS:
	* README:
	
	gedit 2.15.2 released

2006-05-15  Steve Frécinaux  <steve@istique.net>

	* bindings/python/gedit.defs: Remove gedit_ prefix from functions, and
	add gedit_-prefixed ones marked as deprecated.
	
	* bindings/python/gedit.override: Add overrides for deprecated functions
	issuing a DeprecationWarning when used.
	
	* plugins/externaltools/tools/__init__.py:
	* plugins/externaltools/tools/functions.py:
	* plugins/snippets/snippets/SnippetComplete.py:
	* plugins/snippets/snippets/SnippetsDialog.py:
	* plugins/snippets/snippets/__init__.py:
	
	Use the new function names.

2006-05-15  Paolo Borelli  <pborelli@katamail.com>

	* plugins/sort/gedit-sort-plugin.c: handle empty lines correctly.
	bug #341117.

2006-05-14  Steve Frécinaux  <steve@istique.net>

	* bindings/python/Makefile.am:
	* bindings/python/geditutils.defs:
	* bindings/python/geditutils.override:
	
	New gedit.utils python module binding a few functions from gedit-utils.h
