@@ -1,3 +1,9 @@
+2006-05-20  Paolo Maggi  <paolo@gnome.org>
+
+	* gedit/gedit-window.c (create_language_menu_item)
+	(create_languages_menu) (update_languages_menu): use "None" instead of
+	"Normal" in the Highlight Mode menu
+
 2006-05-19  Steve Frécinaux  <steve@istique.net>
 
 	* gedit/Makefile.am: Build gedit as a static library before including it
